<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <Button
                android:id="@+id/filterButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/filter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/resetButton" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/minAgeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/minimum_age"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <NumberPicker
                            android:id="@+id/minAgePicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            app:layout_constraintEnd_toStartOf="@+id/maxAgeText"
                            app:layout_constraintHorizontal_bias="0.115"
                            app:layout_constraintStart_toEndOf="@+id/minAgeText"
                            app:layout_constraintTop_toTopOf="parent" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/maxAgeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/maximum_age"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/maxAgePicker"
                            app:layout_constraintTop_toTopOf="parent" />

                        <NumberPicker
                            android:id="@+id/maxAgePicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="286dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/majorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/program_of_study"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@+id/minAgePicker" />

                        <CheckBox
                            android:id="@+id/computerScienceBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/computer_science"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/majorText" />

                        <CheckBox
                            android:id="@+id/mathematicalPhysicalSciencesBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/mathematical_physical_sciences"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <CheckBox
                            android:id="@+id/lifeSciencesBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/life_sciences"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <CheckBox
                            android:id="@+id/socialSciencesBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/social_sciences"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <CheckBox
                            android:id="@+id/rotmanBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/rotman"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <CheckBox
                            android:id="@+id/otherStudyBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/other"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/yearText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/year_of_study"
                            android:textStyle="bold"/>

                        <CheckBox
                            android:id="@+id/firstYearBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/first_year"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <CheckBox
                            android:id="@+id/secondYearBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/second_year"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <CheckBox
                            android:id="@+id/thirdYearBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/third_year"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <CheckBox
                            android:id="@+id/fourthYearBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/fourth_year"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <CheckBox
                            android:id="@+id/graduateBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/graduate"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/campusText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:text="@string/campus"
                            android:textStyle="bold"/>

                        <CheckBox
                            android:id="@+id/stGeorgeBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/st_george"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent" />

                        <CheckBox
                            android:id="@+id/mississaugaBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/mississauga"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent" />

                        <CheckBox
                            android:id="@+id/scarboroughBox"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:text="@string/scarborough"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent" />
                    </LinearLayout>
                    </LinearLayout>
<!--                Extra Scrolling Space, for future use-->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="286dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:baselineAligned="false">
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

