<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_layer.login.LoginActivity">

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/LoginText"
        android:layout_marginTop="75dp"
        android:text="Email:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/EmailText"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/loginEmail"
        android:layout_marginTop="25dp"
        android:text="Password:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/PasswordText"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/EnterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@id/loginPassword"
        android:layout_marginTop="30dp"
        android:text="Login" />

    <TextView
        android:id="@+id/BasicInfoViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/accountButton"
        android:layout_marginBottom="5dp"
        android:text="Don't have an account?"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/accountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:text="Create An account"
        android:onClick="showCreateAccountView" />

</RelativeLayout>